--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	    
       <!-- 3DCGモデルを読み込む -->
       <a-assets>
-        <a-asset-item id="bottle" src="./asset/bottle.glb"></a-asset-item>
+        <a-asset-item id="bottle" src="./tree/main/asset/bottle.glb"></a-asset-item>
       </a-assets>
 
       <!-- マーカーの.pattファイルを読み込む -->
-      <a-marker type="pattern" url="./asset/pattern-bottle.patt">
+      <a-marker type="pattern" url="./tree/main/asset/pattern-bottle.patt">
         <!-- 3Dモデルを呼び出す -->
         <a-entity gltf-model="#bottle"></a-entity>
       </a-marker>
