--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a-assets>
 
       <!-- マーカーの.pattファイルを読み込む -->
-      <a-marker type="pattern" url="./asset/pattern-bottle.patt">
+      <a-marker type="pattern" url="./asset/pattern-bottle2.patt">
         <!-- 3Dモデルを呼び出す -->
         <a-entity gltf-model="#bottle"></a-entity>
       </a-marker>
